# mif-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  prometheus.yaml
locale/: global.yml
src/: main.rs
src/bot/: core.rs  mod.rs
src/bot/commands/: administrative.rs  directive.rs  informative.rs  mod.rs
src/bot/commands/informative/: help.rs  mod.rs  ping.rs  userinfo.rs
src/bot/commands/wov/: clan.rs  mod.rs  player.rs
src/bot/core/: constants.rs  mod.rs  structs.rs
src/bot/db/: prefixes.rs
src/bot/handlers/: guild_events.rs  mod.rs  ready.rs
src/bot/server/: mod.rs
src/db/: jobs.rs  mod.rs  prefixes.rs  users.rs
src/db/wolvesville/: clan.rs  player.rs
src/utils/: emojis.rs  image.rs  language.rs  logger.rs  math.rs  mod.rs  scheduler.rs  tests.rs  time.rs
src/utils/apicallers/: mod.rs  tests.rs  wolvesville.rs
src/utils/apicallers/wolvesville/: mod.rs  models.rs  tests.rs
src/utils/image/: mod.rs  wolvesville.rs
