[package]
name = "mif"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
dotenvy = "0.15.7"
image = "0.25.5"
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "chrono"]}
poise = { version = "0.6.1", features = ["cache"] }
time = { version = "0.3.36", features = ["parsing", "local-offset"]}
tokio = { version = "1.41.0", features = ["full", "rt-multi-thread"]}
lru = "0.12.5"
logfather = "0.2.6"
rust-i18n = "3.1.2"
reqwest = { version = "0.12.8", features = ["json"] }

[package.metadata.i18n]
available-locales = ["en", "uk"]
default-locale = "en"
load-path = "locale"