[package]
name = "mif"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29" # To calculate text width
anyhow = "1.0.95"
axum = "0.8.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
futures = "0.3.31"
image = "0.25.5"
imageproc = "0.25.0"
serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
sysinfo = "0.33.1"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls", "chrono"]}
poise = { version = "0.6.1", features = ["cache"] }
prometheus = "0.13.4"
plotters = "0.3.7"
tokio = { version = "1.41.0", features = ["full", "rt-multi-thread"]}
lru = "0.13.0"
logfather = "0.2.6"
rust-i18n = "3.1.2"
reqwest = { version = "0.12.8", features = ["json"] }

[package.metadata.i18n]
available-locales = ["en", "uk"]
default-locale = "en"
load-path = "locale"